--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="mainBlue">#0093B7</color>
     <color name="darkBlue">#005F89</color>
+    <color name="darkBlue40">#66005F89</color>
     <color name="backgroundLightBlue">#D1E1E5</color>
 
     <color name="white">#FFFFFF</color>
