--- a/app/src/main/res/layout/dialogs.xml
+++ b/app/src/main/res/layout/dialogs.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toTopOf="@+id/topPanelLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomPanelLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView" />
 
     <ProgressBar
         android:id="@+id/progressBarDialogs"
@@ -27,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@+id/topPanelLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomPanelLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/bottomNavigationView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsDialogsRecycleView"
@@ -35,7 +35,7 @@
         android:layout_height="0dp"
         android:scrollbars="none"
         android:layout_margin="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomPanelLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topPanelLayout"/>
