--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -110,7 +110,7 @@
     android:text="@string/saveData"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintBottom_toTopOf="@id/bottomPanelLayout"
+    app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
     android:layout_marginBottom="1dp" />
 
     <include layout="@layout/part_bottom_panel"/>
