--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,13 +9,111 @@
 
     <include layout="@layout/part_top_panel" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/scheduleProfileBtn"
-        style="@style/smallButton"
-        android:text="Расписание"
-        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <LinearLayout
+        android:id="@+id/infoProfileLayout"
+        style="@style/wideVerticalBlock"
+        android:background="@color/mainBlue"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topPanelLayout">
+
+        <LinearLayout
+            style="@style/wideHorizontalBlock"
+            app:layout_constraintTop_toBottomOf="@id/topPanelLayout">
+
+            <LinearLayout
+                style="@style/highHorizontalBlock"
+                android:layout_weight="1"
+                android:gravity="end|center">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/subscribeProfileBtn"
+                    style="@style/actionButton"
+                    app:srcCompat="@drawable/icon_subscribe_24dp" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/subscriptionsProfileBtn"
+                    style="@style/actionButton"
+                    app:srcCompat="@drawable/icon_subscriptions_24dp" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/avatarProfileImage"
+                style="@style/profileAvatar"
+                android:layout_weight="1"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <LinearLayout
+                style="@style/highHorizontalBlock"
+                android:layout_weight="1"
+                android:gravity="start|center">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/dialogsProfileBtn"
+                    style="@style/actionButton"
+                    app:srcCompat="@drawable/icon_chat_24dp" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/scheduleProfileBtn"
+                    style="@style/actionButton"
+                    app:srcCompat="@drawable/icon_schedule_24dp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/wideVerticalBlock"
+            android:gravity="center"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/fullNameProfileText"
+                style="@style/profileMediumText"
+                android:text="Name Surname" />
+
+            <TextView
+                android:id="@+id/cityProfileText"
+                style="@style/profileThinText"
+                android:text="City" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/wideHorizontalBlock"
+            android:baselineAligned="false"
+            android:padding="5dp">
+
+            <LinearLayout
+                style="@style/wideHorizontalBlock"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/subscribersProfileText"
+                    style="@style/profileThinText"
+                    android:text="Подписчики: 0" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ratingProfileLayout"
+                style="@style/wideHorizontalBlock"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <RatingBar
+                    android:id="@+id/profileRatingBar"
+                    style="@android:style/Widget.Holo.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:theme="@style/ratingBarColors" />
+
+                <TextView
+                    android:id="@+id/ratingProfileText"
+                    style="@style/profileThinText"
+                    android:text="0 (0)" />
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+    >>>>>>> Stashed changes
 
     <ProgressBar
         android:id="@+id/loadingProfileProgressBar"
@@ -24,8 +122,6 @@
         android:layout_gravity="center"
         android:indeterminateTint="@color/mainBlue"
         app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent" />
 
     <LinearLayout
@@ -33,12 +129,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topPanelLayout">
+        app:layout_constraintTop_toBottomOf="@id/infoProfileLayout">
 
         <!-- Верхняя часть-->
-        <LinearLayout
+        <!--<LinearLayout
             style="@style/block"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,15 +153,15 @@
                     android:background="@drawable/block_text"
                     android:orientation="vertical">
 
-                    <ImageView
+                   &lt;!&ndash; <ImageView
                         android:id="@+id/avatarProfileImage"
                         android:layout_width="@dimen/photo_width"
                         android:layout_height="@dimen/photo_height"
                         android:layout_gravity="center"
-                        tools:srcCompat="@tools:sample/avatars" />
+                        tools:srcCompat="@tools:sample/avatars" />&ndash;&gt;
                 </LinearLayout>
 
-                <!-- Rating bar -->
+                &lt;!&ndash; Rating bar &ndash;&gt;
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -90,12 +184,12 @@
                         style="@style/defaultTextProfile"
                         android:text="TextView" />
 
-                    <com.google.android.material.button.MaterialButton
+                   &lt;!&ndash; <com.google.android.material.button.MaterialButton
                         android:id="@+id/subscribeProfileBtn"
                         style="@style/smallButton"
                         android:layout_width="match_parent"
                         android:layout_weight="1"
-                        android:text="Подписаться" />
+                        android:text="Подписаться" />&ndash;&gt;
                 </LinearLayout>
             </LinearLayout>
 
@@ -146,7 +240,7 @@
                     android:layout_weight="1"
                     android:text="Диалог" />
 
-                <!--<LinearLayout
+                &lt;!&ndash;<LinearLayout
                     android:id="@+id/subscriptionsProfileLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -162,12 +256,12 @@
                         android:gravity="center"
                         android:visibility="gone"
                         android:text="Подписки" />
-                </LinearLayout>-->
+                </LinearLayout>&ndash;&gt;
             </LinearLayout>
-        </LinearLayout>
+        </LinearLayout>-->
 
         <LinearLayout
-            android:id="@+id/switcherProfileLayout"
+            android:id="@+id/controlPanelProfileLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -182,7 +276,7 @@
                 android:gravity="center">
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/addServicesProfileBtn"
+                    android:id="@+id/createServicesProfileBtn"
                     style="@style/smallButton"
                     android:gravity="center"
                     android:text="@string/addServices" />
@@ -235,6 +329,14 @@
             android:layout_height="wrap_content"
             android:scrollbars="none" />
     </LinearLayout>
+
+    <!--<com.google.android.material.button.MaterialButton
+        android:id="@+id/scheduleProfileBtn"
+        style="@style/smallButton"
+        android:text="Расписание"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />-->
 
     <include layout="@layout/part_bottom_panel" />
 
