--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="backgroundLightBlue">#D1E1E5</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="white80">#CCFFFFFF</color>
     <color name="white50">#80FFFFFF</color>
     <color name="black">#000000</color>
 
