--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,14 @@
 <resources>
-    <!-- Base application theme. -->
+
+    <!-- THEMES -->
+
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Reg pages -->
         <item name="colorPrimary">@color/mainBlue</item>
         <item name="colorPrimaryDark">@color/darkBlue</item>
         <item name="colorAccent">@color/white50</item>
         <item name="android:textColorHint">@color/black</item>
     </style>
 
-    <!-- Base application theme. -->
     <style name="allPages" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:background">@color/backgroundLightBlue</item>
         <item name="android:layout_width">match_parent</item>
@@ -24,18 +24,114 @@
         <item name="android:background">@color/mainBlue</item>
     </style>
 
-    <!-- Style for extra text -->
+    <!-- TEXT -->
+
+    <style name="profileText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="profileMediumText" parent="profileText">
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="profileThinText" parent="profileText">
+        <item name="fontFamily">@font/roboto_thin</item>
+        <item name="android:textColor">@color/white80</item>
+    </style>
+
     <style name="extraText">
         <item name="android:textColor">@color/white50</item>
         <item name="android:textSize">14sp</item>
-        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="ImageRatingBar" parent="@android:style/Widget.RatingBar">
-        <item name="android:progressDrawable">@drawable/ratingbar_selector</item>
-        <item name="android:minHeight">50dp</item>
-        <item name="android:maxHeight">50dp</item>
+    <!-- BUTTONS -->
+    <style name="baseButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:fontFamily">@font/roboto_black</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAllCaps">true</item>
     </style>
+
+    <style name="loginButton" parent="baseButton">
+        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="android:width">220dp</item>
+        <item name="cornerRadius">18dp</item>
+    </style>
+
+    <style name="smallButton" parent="baseButton">
+        <item name="android:layout_marginStart">2dp</item>
+        <item name="android:layout_marginEnd">2dp</item>
+        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="cornerRadius">18dp</item>
+    </style>
+
+    <style name="switchButton" parent="baseButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:backgroundTint">@color/switcher</item>
+        <item name="cornerRadius">18dp</item>
+    </style>
+
+    <style name="actionButton" parent="baseButton">
+        <item name="android:layout_width">56dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:backgroundTint">@color/darkBlue</item>
+        <item name="cornerRadius">28dp</item>
+        <item name="borderWidth">0dp</item>
+        <item name="tint">@color/white</item>
+        <item name="elevation">5dp</item>
+    </style>
+
+    <!-- BLOCKS -->
+
+    <style name="verticalBlock">
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="wideVerticalBlock" parent="verticalBlock">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="horizontalBlock">
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="wideHorizontalBlock" parent="horizontalBlock">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="highHorizontalBlock" parent="horizontalBlock">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <!-- IMAGE -->
+
+    <style name="profileAvatar">
+        <item name="android:layout_width">@dimen/photo_width</item>
+        <item name="android:layout_height">@dimen/photo_height</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+
+    <!-- RATING BAR -->
+
+    <style name="ratingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/rating_bar</item>
+        <item name="android:minHeight">23dip</item>
+        <item name="android:maxHeight">25dip</item>
+    </style>
+
+    <!-- ======================================================================================= -->
+
+
+
 
     <style name="buttonText" parent="@android:style/Widget.RatingBar">
         <item name="android:textColor">@color/white</item>
@@ -121,15 +217,6 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="defaultTextProfile">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="fontFamily">@font/roboto_black</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:padding">2dp</item>
-    </style>
-
     <style name="mainTextProfile">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -146,12 +233,11 @@
     </style>
     <!-- Style for block style -->
     <style name="block">
-        <item name="android:elevation">5dp</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:background">@drawable/block_text</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/mainBlue</item>
     </style>
 
     <style name="ratingBarColors" parent="@android:style/Widget.RatingBar">
@@ -182,7 +268,6 @@
         <item name="android:colorForeground">@android:color/darker_gray</item>
     </style>
 
-    <!-- НОВЫЕ СТИЛИ -->
     <style name="loginPackageText">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
@@ -226,33 +311,6 @@
     <style name="loginSpinner">
         <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <!-- Style for main buttons -->
-    <style name="baseButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAllCaps">true</item>
-    </style>
-
-    <style name="loginButton" parent="baseButton">
-        <item name="android:backgroundTint">@color/darkBlue</item>
-        <item name="android:width">220dp</item>
-        <item name="cornerRadius">18dp</item>
-    </style>
-
-    <style name="smallButton" parent="baseButton">
-        <item name="android:layout_marginStart">2dp</item>
-        <item name="android:layout_marginEnd">2dp</item>
-        <item name="android:backgroundTint">@color/darkBlue</item>
-        <item name="cornerRadius">18dp</item>
-    </style>
-
-    <style name="switchButton" parent="baseButton">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:backgroundTint">@color/switcher</item>
-        <item name="cornerRadius">18dp</item>
     </style>
 
     <style name="mainButton" parent="baseButton">
