--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
     android:layout_marginTop="5dp"
+    android:layout_marginEnd="10dp"
     android:layout_marginBottom="5dp"
     android:orientation="horizontal"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.adapters.elements.chatElements.MessageElement">
@@ -15,22 +15,21 @@
         android:id="@+id/messageTextMessageElementText"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="@color/backgroundLightBlue"
         android:maxWidth="230dp"
-        android:textSize="14sp"
-        android:textColor="@color/black"
-        android:background="@color/white"
         android:padding="8dp"
-        android:textStyle="bold"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/messageTimeMessageElementText"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:textSize="10sp"
-        android:background="@color/white"
+        android:background="@color/backgroundLightBlue"
         android:gravity="bottom"
-        android:paddingEnd="2dp"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:textSize="10sp" />
 
 </LinearLayout>
