bottom panel was fixed (my profile); top panel was replaced by toolbar

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -114,17 +114,17 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/profileTabLayout"
-            style="@style/wideHorizontalBlock" >
+            style="@style/tabs">
 
             <com.google.android.material.tabs.TabItem
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="Записи"/>
+                android:layout_height="wrap_content"
+                android:text="Записи" />
 
             <com.google.android.material.tabs.TabItem
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="Услуги"/>
+                android:layout_height="wrap_content"
+                android:text="Услуги" />
 
         </com.google.android.material.tabs.TabLayout>
 
