--- a/app/src/main/res/layout/part_top_panel.xml
+++ b/app/src/main/res/layout/part_top_panel.xml
@@ -1,8 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/topPanelLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:layout_constraintTop_toTopOf="parent" />
+    android:background="@color/mainBlue"
+    app:menu="@menu/top_navigation_menu"
+    app:layout_constraintTop_toTopOf="parent"
+    app:navigationIcon="@drawable/icon_back_24dp">
+
+    <TextView
+        android:id="@+id/titleTopPanelText"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="end">
+
+        <ImageView
+            android:id="@+id/avatarTopPanelImage"
+            tools:srcCompat="@tools:sample/avatars"
+            android:layout_width="@dimen/photo_avatar_height"
+            android:layout_height="@dimen/photo_avatar_height"
+            android:layout_gravity="center"
+            android:layout_marginEnd="3dp" />
+    </LinearLayout>
+</com.google.android.material.appbar.MaterialToolbar>
