top panel was fixed (action icon, title, style)

--- a/app/src/main/res/layout/part_top_panel.xml
+++ b/app/src/main/res/layout/part_top_panel.xml
@@ -12,9 +12,7 @@
 
     <TextView
         android:id="@+id/titleTopPanelText"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="" />
+        style="@style/topTitleText" />
 
     <LinearLayout
         android:layout_width="match_parent"
