--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,11 +48,19 @@
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
+    <style name="topTitleText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+    </style>
+
     <!-- BUTTONS -->
     <style name="baseButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:fontFamily">@font/roboto_black</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/roboto_black</item>
         <item name="android:textAllCaps">true</item>
     </style>
 
@@ -137,6 +145,24 @@
         <item name="tabIndicatorColor">@color/darkBlue</item>
         <item name="tabSelectedTextColor">@color/darkBlue</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!-- NAVIGATION -->
+
+    <style name="bottomNavigation">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="labelVisibilityMode">unlabeled</item>
+        <item name="android:background">@color/mainBlue</item>
+        <item name="itemIconTint">@color/navigation</item>
+    </style>
+
+    <style name="topNavigation">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="labelVisibilityMode">unlabeled</item>
+        <item name="android:background">@color/mainBlue</item>
+        <item name="itemIconTint">@color/navigation</item>
     </style>
 
     <!-- ======================================================================================= -->
@@ -364,14 +390,6 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-    </style>
-
-    <style name="bottomNavigation">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="labelVisibilityMode">unlabeled</item>
-        <item name="android:background">@color/mainBlue</item>
-        <item name="itemIconTint">@color/navigation</item>
     </style>
 
 </resources>
